Add force-disconnect to test script
Signed-off-by: Jose Pacheco <jpacheco@csatf.org>

--- a/web/app-socket-test.html
+++ b/web/app-socket-test.html
@@ -14,11 +14,17 @@
 <body>
 <script>
 
-    var socket = io('http://localhost');
+    var socket = io('http://192.168.7.12');
 
     socket.on('barcode', function (code) {
         console.log("Barcode: "+code);
+        socket.emit('barcode-received', true);
     });
+
+
+    function forceDisconnect(){
+        socket.emit('force-disconnect');
+    }
 
 </script>
 </body>
